@@ -6,7 +6,8 @@ Change Log:
 
 1.0.1.1
 ----------------------------------------------------------------------
-- Add warning when BuddyPress pages conflict with M2 Membership pages
+- Add a warning when BuddyPress pages conflict with M2 Membership pages
+- Add a warning when M2 is installed in an deprecated directory (can cause conflicts)
 - Fix the BuddyPress registration form/workflow
 - Fix the Profile Fields Add-on, now settings are actually saved
 - Fix a PHP warning on Membership 2 pages about "invalid argument in foreach"
